Updated Beginning_Python upto A2

--- a/Beginning_Python.ipynb
+++ b/Beginning_Python.ipynb
@@ -40,6 +40,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def is_on_line(slope, y_intersect, px, py):\n",
+    "    \"\"\"Return True if (px, py) is on the line with given slope and y_intersect\"\"\"\n",
+    "    \n",
+    "    return py == px * slope + y_intersect\n",
+    "\n",
+    "assert is_on_line(2, 1, 2, 5) == True\n",
+    "assert is_on_line(2, 1, 2, 4) == False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from math import pi\n",
     "\n",
     "def sphere_volume(R):\n",
@@ -52,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +91,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def harmonic(n):\n",
+    "    \"\"\"Return the nth harmonic number\"\"\"\n",
+    "    \n",
+    "    if n == 1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return 1/n + harmonic(n-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +126,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def parity(bS):\n",
+    "    \"\"\"Return the parity of 1's in binary string bS\"\"\"\n",
+    "    \n",
+    "    total = bS.count('1')\n",
+    "    if total % 2 == 0:\n",
+    "        return 'even'\n",
+    "    else:\n",
+    "        return 'odd'\n",
+    "    \n",
+    "assert parity('110101') == 'even'\n",
+    "assert parity('1110011') == 'odd'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_multiple(n, factor):\n",
+    "    \"\"\"Return True if n is a multiple of factor\"\"\"\n",
+    "    \n",
+    "    return n % factor == 0\n",
+    "\n",
+    "def prime_test(a, b):\n",
+    "    \"\"\"Return True if a is prime relatice to b\"\"\"\n",
+    "    \n",
+    "    if b == 1:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return not(is_multiple(a, b)) and \\\n",
+    "               prime_test(a, b - 1)\n",
+    "\n",
+    "def is_prime(a):\n",
+    "    \"\"\"Retrun True if a is prime\"\"\"\n",
+    "    \n",
+    "    if a == 2:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return prime_test(a, a - 1)\n",
+    "\n",
+    "def count_prime_factors(count, n, a):\n",
+    "    \"\"\"Return recursively the prime factors from a to n\"\"\"\n",
+    "    \n",
+    "    if a == 1:\n",
+    "        return count\n",
+    "    if is_prime(a) and is_multiple(n, a):\n",
+    "        count += 1\n",
+    "    return count + count_prime_factors(0, n, a - 1)\n",
+    "\n",
+    "def total_prime_factors(n):\n",
+    "    \"\"\"Return the number of prime factors of n\"\"\"\n",
+    "    \n",
+    "    return count_prime_factors(0, n, n)\n",
+    "\n",
+    "assert total_prime_factors(3) == 1\n",
+    "assert total_prime_factors(10) == 2\n",
+    "assert total_prime_factors(42) == 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def smallest_in_list(L):\n",
+    "    \"\"\"Return the smallest number in non-empty list L\"\"\"\n",
+    "    \n",
+    "    minim = L[0]\n",
+    "    for num in L:\n",
+    "        if num < minim:\n",
+    "            minim = num\n",
+    "    \n",
+    "    return minim\n",
+    "\n",
+    "def largest_in_list(L):\n",
+    "    \"\"\"Return the largest number in non-empty list L\"\"\"\n",
+    "    \n",
+    "    maxim = L[0]\n",
+    "    for num in L:\n",
+    "        if num > maxim:\n",
+    "            maxim = num\n",
+    "    \n",
+    "    return maxim\n",
+    "\n",
+    "def max_diff(L):\n",
+    "    \"\"\"Return the largest difference between any two numbers in L\"\"\"\n",
+    "    \n",
+    "    return largest_in_list(L) - smallest_in_list(L)\n",
+    "\n",
+    "assert smallest_in_list([-5, 2, 10.5]) == -5\n",
+    "assert largest_in_list([-5, 2, 10.5]) == 10.5\n",
+    "assert max_diff([-5, 2, 10.5]) == 15.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,6 +255,50 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from statistics import mean, stdev\n",
+    "\n",
+    "def mean_relative(LoN):\n",
+    "    \"\"\"\n",
+    "    Return a a list of strings where each string in the produced list\n",
+    "    should be either 'below-mean', 'above-mean', or 'mean' if the number\n",
+    "    at location in the list LoN was below the mean of the list, \n",
+    "    above the mean of the list, or equal to the mean of the list respectively\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    mn = mean(LoN)\n",
+    "    retL = []\n",
+    "    \n",
+    "    for num in LoN:\n",
+    "        if num < mn:\n",
+    "            retL.append('below-mean')\n",
+    "        elif num == mn:\n",
+    "            retL.append('mean')\n",
+    "        else:\n",
+    "            retL.append('above-mean')\n",
+    "    \n",
+    "    return retL\n",
+    "\n",
+    "assert mean_relative([5, 7, 9, 12]) == ['below-mean', 'below-mean', 'above-mean', 'above-mean']\n",
+    "\n",
+    "def z_scores(LoN):\n",
+    "    \n",
+    "    mn = mean(LoN)\n",
+    "    SD = stdev(LoN)\n",
+    "    retL = []\n",
+    "    \n",
+    "    for num in LoN:\n",
+    "        z = (num - mn) / SD\n",
+    "        retL.append(z)\n",
+    "    \n",
+    "    return retL"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -131,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,6 +354,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Sides of equal length of quadrilateral Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "\n",
+    "def distance_sqrd(x1, y1, x2, y2):\n",
+    "    \"\"\"Return Cartesian distance squared between (x1, y1) and (x2, y2).\"\"\"\n",
+    "    \n",
+    "    return  (x1 - x2)**2 + (y1 - y2)**2\n",
+    "\n",
+    "\n",
+    "\n",
+    "def total_equal_sides(ax, ay, bx, by, cx, cy, dx, dy):\n",
+    "    \"\"\"\n",
+    "    Return number of sides equal length of quadrilateral formed by points\n",
+    "    (ax, ay), (bx, by), (cx, cy), (dx, dy) of the Cartesian plane.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    side1 = distance_sqrd(ax, ay, bx, by)\n",
+    "    side2 = distance_sqrd(bx, by, cx, cy)\n",
+    "    side3 = distance_sqrd(cx, cy, dx, dy)\n",
+    "    side4 = distance_sqrd(dx, dy, ax, ay)\n",
+    "  \n",
+    "    if side1 == side2 == side3 == side4:\n",
+    "        return 4\n",
+    "    elif (side1 == side2 == side3) or \\\n",
+    "         (side2 == side3 == side4) or \\\n",
+    "         (side3 == side4 == side1):\n",
+    "        return 3\n",
+    "    elif not(side1 == side2) and \\\n",
+    "         not(side1 == side3) and \\\n",
+    "         not(side1 == side4) and \\\n",
+    "         not(side2 == side3) and \\\n",
+    "         not(side2 == side4) and \\\n",
+    "         not(side3 == side4):\n",
+    "        return 0\n",
+    "    else:\n",
+    "        return 2  \n",
+    "\n",
+    "assert total_equal_sides(30, 30, 10, -10, -30, 20, -20, 30) == 2\n",
+    "assert total_equal_sides(60, 10, 10, 10, 40, -15, 60, -15) == 0\n",
+    "assert total_equal_sides(60, 10, 10, 10, 10, -15, 60, -15) == 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Baking Loaves Example:\n",
     "\n",
     "***Recipe***:\n",
@@ -188,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,6 +455,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Point-of-Sales Example:\n",
+    "A POS system is a software system used by a retailer to facilitate transactions\n",
+    "between customers and the retailer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def change_due(Costs, paid):\n",
+    "    \"\"\"\n",
+    "    Return the amount of change the customer should receive back\n",
+    "    based on the list of numbers costs and the non-negative number\n",
+    "    paid which represents the amount of money the customer is \n",
+    "    providing as payment.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    return round(paid - sum(Costs), 2)\n",
+    "\n",
+    "assert change_due([2.65, 23.30, 7.99, 59.99], 100.0) == 6.07\n",
+    "\n",
+    "def paid_enough(Costs, paid):\n",
+    "    \"\"\"Return true if the sum of Costs is not great than paid\"\"\"\n",
+    "    \n",
+    "    if paid - sum(Costs) < 0:\n",
+    "        return False\n",
+    "    else:\n",
+    "        return True\n",
+    "\n",
+    "assert paid_enough([2.65, 23.30, 7.99, 59.99], 100) == True\n",
+    "assert paid_enough([2.65, 23.30, 7.99, 59.99], 50) == False\n",
+    "\n",
+    "def free_item(Costs, paid):\n",
+    "    \"\"\"\n",
+    "    Return first item in Costs that is large enough that if reduced\n",
+    "    to 0 would mean the customer has enough to pay for their bill.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    threshold = sum(Costs) - paid\n",
+    "    for item in Costs:\n",
+    "        if item > threshold:\n",
+    "            return item\n",
+    "\n",
+    "assert free_item([2.65, 23.30, 7.99, 59.99], 80) == 23.30\n",
+    "assert free_item([2.65, 23.30, 7.99, 59.99], 60) == 59.99"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Luhn's Algorithm check digit Example:\n",
     "\n",
     "When dealing with numbers like credit card numbers, it's useful to have a quick way to detect data entry errors. Here we use a simplified [Luhn's Algorithm](https://en.wikipedia.org/wiki/Luhn_algorithm), where the digits of a number are added together.\n",
@@ -236,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,6 +709,43 @@
     "assert is_valid_date(20200922) == True\n",
     "assert is_valid_date(30313) == True\n",
     "assert is_valid_date(17520912) == False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sudoku Example:\n",
+    "\n",
+    "Sudoku is game where the player must enter the numbers one through nine into a 9x9 grid that is also broken up into 3x3 “boxes”. The goal of Sudoku is to make sure each row, grid, and box has the numbers one through nine in them (meaning there can be no duplicates as there are only nine spots in each container)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sudoku_row_grid_valid(LoN):\n",
+    "    \"\"\"\n",
+    "    Return true if the list of numbers LoN contains only \n",
+    "    each of the numbers one through nine exactly once and\n",
+    "    nothing else, or return false otherwise.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    for unit in range(1,9):\n",
+    "        if (unit not in LoN) or (LoN.count(unit) > 1):\n",
+    "            return False\n",
+    "    \n",
+    "    for num in LoN:\n",
+    "        if num < 1 or num > 9:\n",
+    "            return False\n",
+    "    \n",
+    "    return True\n",
+    "\n",
+    "assert sudoku_row_grid_valid([1, 2, 3, 5, 4, 9, 7, 8, 6]) == True\n",
+    "assert sudoku_row_grid_valid([1]) == False    \n",
+    "assert sudoku_row_grid_valid([0]) == False"
    ]
   }
  ],
