Added reversing linked list problem

--- a/Python_The_early_days_of_learning.ipynb
+++ b/Python_The_early_days_of_learning.ipynb
@@ -242,11 +242,180 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# A recent thought: playing with Linked Lists\n",
+    "\n",
+    "On November 1st 2023, while having lunch at work, I was watching a Youtube video emulating a Google Interview. The question was to reverse a linked-list.\n",
+    "\n",
+    "Watching the mock interviewee work through the problem, I was thinking to myself that this cannot be too difficult!? I know about linked-lists from my C programming (2020 Summer), so I should be able to solve it. Then lunchtime was over.\n",
+    "\n",
+    "On my drive home, I decided to solve the problem in my head (probably not advisable while driving), and it tool me longer than I thought it would. After about 10 minutes of debating the code with myself, I felt that I had a solution, and decided to write it up. Here is that write up - using python. I am doing this from memory, so please excuse mistakes.\n",
+    "\n",
+    "This code isn't really from the early days, but the simplicity of the code encourages me to put it here."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Setting up a (forward) linked list class. A linked list should be a sequence of\n",
+    "# nodes, starting with a head node, and ending with None or Null pointer.\n",
+    "# In abstract notation, a linked-list (LL) is\n",
+    "# either None (empty)\n",
+    "# or head -> LL*\n",
+    "# A node is an ADT that is either None/Null pointer, i.e., empty, or a class\n",
+    "# containing a data field and a next field. The next field acts as a pointer\n",
+    "# to the next node in the data field.\n",
+    "\n",
+    "class Node():\n",
+    "    \"\"\"The structure of a non-empty node.\n",
+    "    Fields: data, next\n",
+    "    data is type object\n",
+    "    next is type Node or None\"\"\"\n",
+    "\n",
+    "    def __init__(self, data, next=None):\n",
+    "        \"\"\"Constructor\"\"\"\n",
+    "        self.data = data\n",
+    "        self.next = next\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return f'{self.data} -> '\n",
+    "    \n",
+    "    def pop_data(self):\n",
+    "        return self.data\n",
+    "    \n",
+    "    def next_node(self):\n",
+    "        return self.next\n",
+    "    \n",
+    "    def __eq__(self, other):\n",
+    "        \"\"\"Equating two nodes, could get expensive for long linked lists.\n",
+    "        A better way to do this would be to use memory address of the next\n",
+    "        pointer rather than the recursive equality done here.\"\"\"\n",
+    "        return self.data == other.data and self.next==other.next\n",
+    "    \n",
+    "class LinkedList():\n",
+    "    \"\"\"A linked list can be empty, i.e., head=None, or a sequence of nodes,\n",
+    "    starting with a head node, where each node points to the subsequent node\n",
+    "    until the last node, which then points to None.\n",
+    "    \n",
+    "    Linked lists can be initiated in various ways. Here, I am using a very\n",
+    "    simple construction from a list of numbers (obviously not a good choice).\"\"\"\n",
+    "    \n",
+    "    head = None\n",
+    "\n",
+    "    def __init__(self, loN):\n",
+    "        \"\"\"loN is a list of numbers that is then converted to a linked list\"\"\"\n",
+    "        n = len(loN) # not very python-y, more like a C approach :p\n",
+    "\n",
+    "        self.head = None # if empty\n",
+    "\n",
+    "        for i in range(n): #loop only runs if loN is non-empty\n",
+    "            if i==0:\n",
+    "                self.head = Node(loN[i], None) #set up head\n",
+    "                current = self.head\n",
+    "            else:\n",
+    "                next = Node(loN[i], None) #create next node to insert\n",
+    "                current.next = next #point\n",
+    "                current = next #update\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        current = self.head\n",
+    "        ret_str = 'head: '\n",
+    "        while current: # loops until current is None\n",
+    "            ret_str += str(current)\n",
+    "            current = current.next\n",
+    "\n",
+    "        if self.head: #non-empty\n",
+    "            ret_str += 'None'\n",
+    "        else:\n",
+    "            ret_str = 'empty'\n",
+    "        \n",
+    "        return ret_str\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        if self.head:\n",
+    "            loN = []\n",
+    "            current = self.head\n",
+    "            while current:\n",
+    "                loN.append(current.data)\n",
+    "\n",
+    "            return f'LinkedList({loN})'\n",
+    "        else:\n",
+    "            return 'LinkedList([])'\n",
+    "        \n",
+    "    def __eq__(self, other):\n",
+    "        return self.head == other.head\n",
+    "\n",
+    "\n",
+    "    # The following is the main problem that I am looking to solve:\n",
+    "    def reverse(self):\n",
+    "        \"\"\"reverses the linkied list\n",
+    "        Side-effect: linked list is mutated\"\"\"\n",
+    "\n",
+    "        def help_reverse(head_node):\n",
+    "            \"does the actual reversing from a head node\"\n",
+    "            \n",
+    "            current = head_node\n",
+    "            if head_node: # for non-empty\n",
+    "                next = head_node.next\n",
+    "                current.next = None # A little trickery to reverse head right-away\n",
+    "\n",
+    "            while current and next:\n",
+    "                # Loop until next is None, only when self is non-empty\n",
+    "                previous = current\n",
+    "                current = next\n",
+    "                next = current.next\n",
+    "                current.next = previous\n",
+    "            \n",
+    "            head_node = current # reset head, thust mutating list\n",
+    "            return head_node\n",
+    "        \n",
+    "        self.head = help_reverse(self.head)\n",
+    "        return self\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_reverse_empty_linked_list():\n",
+    "    loN = []\n",
+    "    linkedL = LinkedList(loN)\n",
+    "    assert linkedL.reverse() == LinkedList(loN)\n",
+    "\n",
+    "def test_reverse_non_empty_linked_list():\n",
+    "    loN = [1, 2, 3, 4]\n",
+    "    linkedL = LinkedList(loN)\n",
+    "    loN.reverse()\n",
+    "    assert linkedL.reverse() == LinkedList(loN)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_reverse_empty_linked_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "test_reverse_non_empty_linked_list()"
+   ]
   }
  ],
  "metadata": {
@@ -265,7 +434,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
