minot commentary added

--- a/Python_The_early_days_of_learning.ipynb
+++ b/Python_The_early_days_of_learning.ipynb
@@ -352,6 +352,7 @@
     "\n",
     "\n",
     "    # The following is the main problem that I am looking to solve:\n",
+    "    # given the head node of a linked list, mutate the list to reverse it\n",
     "    def reverse(self):\n",
     "        \"\"\"reverses the linkied list\n",
     "        Side-effect: linked list is mutated\"\"\"\n",
