Added list intersection, minesweeper, list restriction

--- a/Beginning_Python.ipynb
+++ b/Beginning_Python.ipynb
@@ -404,6 +404,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Restricting Domains\n",
+    "Creates a restricticion on a given list based on entries from another list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def restrict_by_pos(source, maximums, pos):\n",
+    "  \"\"\"   restrict(source, maximums)\n",
+    "        consumes two lists of integers of the same length: source, and maximums.\n",
+    "        The function restrict mutates source so that every number it contains is\n",
+    "        smaller than or equal to the number at the same index in maximums,\n",
+    "        which is done by leaving the entry alone if it is less than the corresponding\n",
+    "        entry in maximums or by setting the value to\n",
+    "        the corresponding value in maximums.\n",
+    "    \"\"\"\n",
+    "  if pos == len(source):\n",
+    "    return\n",
+    "  elif max(source[pos], maximums[pos]) == source[pos]:\n",
+    "    source[pos] = maximums[pos]\n",
+    "  restrict_by_pos(source, maximums, pos + 1)\n",
+    "  \n",
+    "def restrict(source, maximums):\n",
+    "  restrict_by_pos(source, maximums, 0)\n",
+    "\n",
+    "L = [3, 6, 0, -2, 4]\n",
+    "restrict(L, [0, 10, 20, 0, -10])\n",
+    "assert L == [0, 6, 0, -2, -10]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Guessing Game\n",
     "Pretty self explanatory, see code below."
    ]
@@ -498,6 +535,57 @@
     "assert total_equal_sides(30, 30, 10, -10, -30, 20, -20, 30) == 2\n",
     "assert total_equal_sides(60, 10, 10, 10, 40, -15, 60, -15) == 0\n",
     "assert total_equal_sides(60, 10, 10, 10, 10, -15, 60, -15) == 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Intersecting Lists\n",
+    "\n",
+    "Here are two functions that create intersections of lists. First one uses recursion, and the second one doesnt."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def intersect_recur(L, M, lst):\n",
+    "    \"\"\" \n",
+    "      using recursion, used with wrapper.\n",
+    "      Mutates lst\n",
+    "    \"\"\"\n",
+    "    if L == [] or M == []:\n",
+    "        return lst\n",
+    "    if (L[0] in M) and (L[0] not in lst):\n",
+    "        lst.append(L[0])\n",
+    "    return intersect_recur(L[1:], M, lst)\n",
+    "\n",
+    "def intersect_no_recursion(L, M):\n",
+    "    \"\"\"Without recursion\"\"\"\n",
+    "    lst = []\n",
+    "    indices = range(len(L))\n",
+    "    index_list = filter(lambda x: L[x] not in L[:x], indices)\n",
+    "    lst = list(map(lambda x: L[x], \\\n",
+    "                    list(filter(lambda x: L[x] in M, index_list))))\n",
+    "    return lst\n",
+    "\n",
+    "def intersect(L, M):\n",
+    "    \"\"\" intersect(L, M)\n",
+    "        consumes two lists of integers L and M and returns\n",
+    "        a list that contains the elements in common between the two lists\n",
+    "        in the order of first appearance in the first list.\n",
+    "    \"\"\"\n",
+    "    lst1 = []\n",
+    "    lst2 = []\n",
+    "    lst1 = intersect_recur(L, M, lst1)\n",
+    "    lst2 = intersect_no_recursion(L, M)\n",
+    "\n",
+    "    return (lst1, lst2)\n",
+    "\n",
+    "assert intersect([2, 5, 5, 7, 9, 2, 4], [1, 1, 1, 5, 8, 9, 7]) == ([5, 7, 9], [5, 7, 9])"
    ]
   },
   {
@@ -604,7 +692,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#The Enforcer\n",
+    "# The Enforcer\n",
     "\n",
     "Websites often have a number of rules for passwords. These are intended to make passwords stronger, but tend to actually make them weaker!\n",
     "\n",
