--- a/Python_The_early_days_of_learning.ipynb
+++ b/Python_The_early_days_of_learning.ipynb
@@ -417,6 +417,173 @@
     "\n",
     "test_reverse_non_empty_linked_list()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Setting up MineSweeper\n",
+    "\n",
+    "In this script, I set up a grid for the game minesweeper. The location of mines are assigned through a given list (which could be randomized). Then the mines are detected in order to place \"safe\" numbers on the board according to how many mines are in the neighborhood (3x3 grid with the safe square in the middle). The grid is created in two different ways - using recursion, and then functionally without recursion."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def row_creator(w, content, lst):\n",
+    "  \"\"\"Creates a row\"\"\"\n",
+    "  if w == 0:\n",
+    "    return \n",
+    "  lst.append(content) \n",
+    "  row_creator(w-1, content, lst)\n",
+    "\n",
+    "def grid_creator(h, lst, retlst):\n",
+    "  \"\"\"Creates the grid using recursion.\n",
+    "    Mutates retlst\n",
+    "    \"\"\"\n",
+    "  if h == 0:\n",
+    "    return\n",
+    "  cpylst = lst.copy()\n",
+    "  retlst.append(cpylst)\n",
+    "  grid_creator(h-1, lst, retlst)\n",
+    "  \n",
+    "def create_grid_recur(width, height, content):\n",
+    "    \"\"\" create_grid(width, height, content)\n",
+    "        consumes two positive natural numbers, width and height, \n",
+    "        and a third value of any type, content.\n",
+    "\n",
+    "        The function returns a width times height two dimensional list\n",
+    "        whose cells all contain content. Uses recursion.\n",
+    "    \"\"\"\n",
+    "    lst = []\n",
+    "    row_creator(width, content, lst)\n",
+    "    retlst = [] \n",
+    "    grid_creator(height, lst, retlst)\n",
+    "    return retlst\n",
+    "\n",
+    "\n",
+    "assert create_grid_recur(3, 2, None) ==  [[None, None, None],\n",
+    "                                    [None, None, None]]\n",
+    "\n",
+    "def create_grid(width, height, content):\n",
+    "  \"\"\"the function create_grid again, this time without using recursion.\"\"\"\n",
+    "  lst = list(range(width))\n",
+    "  lst = list(map(lambda x: content, lst))\n",
+    "  retlst = list(range(height))\n",
+    "  retlst = list(map(lambda x: lst.copy(), retlst))\n",
+    "  return retlst\n",
+    "\n",
+    "assert create_grid(3, 2, None) ==  [[None, None, None],\n",
+    "                                    [None, None, None]]\n",
+    "\n",
+    "def place_mines(lst, width, height, mine_coordinates):\n",
+    "  \"\"\"Places mines at the given mine coordinates\"\"\"\n",
+    "  if mine_coordinates == []:\n",
+    "    return\n",
+    "  else:\n",
+    "    assert mine_coordinates[0][0] < width\n",
+    "    assert mine_coordinates[0][1] < height\n",
+    "    x = mine_coordinates[0][0]\n",
+    "    y = mine_coordinates[0][1]\n",
+    "    lst[x][y] = \"X\"\n",
+    "    #print(lst)\n",
+    "    place_mines(lst, width, height, mine_coordinates[1:])\n",
+    " \n",
+    "def check_for_mines(lst, xcoord, ycoord, width, height):\n",
+    "  if xcoord >= width or ycoord >= height or xcoord <0 or ycoord < 0:\n",
+    "    return False\n",
+    "  #elif lst[xcoord][ycoord] == \"X\":\n",
+    "   # print([xcoord, ycoord])\n",
+    "   # return True\n",
+    "  else:\n",
+    "    #print([xcoord, ycoord])\n",
+    "    if lst[ycoord][xcoord] == \"X\":\n",
+    "      return True\n",
+    "    return False\n",
+    "\n",
+    "def check_neighbors(lst, x, y, width, height):\n",
+    "  \"\"\"At a given coordinate, checks all 3x3 neighbors for mines and adjusts cournt\"\"\"\n",
+    "  check_x1 = x + 1\n",
+    "  check_x2 = x - 1\n",
+    "  check_y1 = y + 1\n",
+    "  check_y2 = y - 1\n",
+    "  \n",
+    "  count = 0\n",
+    "  if check_for_mines(lst, check_x1, check_y1, width, height):\n",
+    "    count += 1\n",
+    "  if check_for_mines(lst, check_x1, y, width, height):\n",
+    "    count += 1\n",
+    "  if check_for_mines(lst, check_x1, check_y2, width, height):\n",
+    "    count += 1\n",
+    "  if check_for_mines(lst, x, check_y1, width, height):\n",
+    "    count += 1\n",
+    "  if check_for_mines(lst, x, check_y2, width, height):\n",
+    "    count += 1 \n",
+    "  if check_for_mines(lst, check_x2, check_y1, width, height):\n",
+    "    count += 1\n",
+    "  if check_for_mines(lst, check_x2, y, width, height):\n",
+    "    count += 1\n",
+    "  if check_for_mines(lst, check_x2, check_y2, width, height):\n",
+    "    count += 1  \n",
+    "  return count\n",
+    "\n",
+    "def place_count(lst, x, y, width, height):\n",
+    "  \"\"\"Calculates the safe number for each coordinate as it goes through the grid\"\"\"\n",
+    "  if x >= width and y >= height:\n",
+    "    return\n",
+    "  elif x >= width:\n",
+    "    if y + 1 >= height:\n",
+    "      return\n",
+    "    else:\n",
+    "      place_count(lst, 0, y+1, width, height)\n",
+    "  #elif lst[y][x] == \"X\":\n",
+    "  #  place_count(lst, x+1, y, width, height)\n",
+    "  else:\n",
+    "    #print([x, y])\n",
+    "    if lst[y][x] == \"X\":\n",
+    "      place_count(lst, x+1, y, width, height)\n",
+    "    else:\n",
+    "      count = check_neighbors(lst, x, y, width, height)\n",
+    "      if not(count == 0):\n",
+    "        lst[y][x] = str(count)\n",
+    "      place_count(lst, x+1, y, width, height)\n",
+    "  \n",
+    "def create_minesweeper_grid(width, height, mine_coordinates):\n",
+    "    \"\"\"    create_minesweeper_grid(width, height, mine_coordinates)\n",
+    "        that consumes width and height, two positive integers, and mine_coordinates,\n",
+    "        a list of lists of two natural numbers \n",
+    "        containing the coordinates of the mines. \n",
+    "\n",
+    "        The function create_minesweeper_grid returns a list of list of strings\n",
+    "        representing the minesweeper grid:\n",
+    "\n",
+    "        Each cell representing a mine contains the string \"X\".\n",
+    "        Each cell that is not in the vicinity of any mine contains the empty string.\n",
+    "        Each other cells contain a string representing the number of mines\n",
+    "        in the adjacent cells (including diagonals).\n",
+    "        The mine coordinates in mine_coordinates must be within grid.\n",
+    "    \"\"\"\n",
+    " \n",
+    "    lst = create_grid(width, height, \"\")\n",
+    "    place_mines(lst, width, height, mine_coordinates)\n",
+    "    place_count(lst, 0, 0, width, height)\n",
+    "    return lst\n",
+    "\n",
+    "assert create_minesweeper_grid(5, 3, [[1,1], [2,2], [1,2]]) == \\\n",
+    "       [[\"1\", \"2\", \"2\", \"1\", \"\"],\\\n",
+    "       [\"1\", \"X\", \"X\", \"2\", \"\"], \\\n",
+    "       [\"1\", \"3\", \"X\", \"2\", \"\"]]  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
