--- a/Python_The_early_days_of_learning.ipynb
+++ b/Python_The_early_days_of_learning.ipynb
@@ -424,12 +424,14 @@
    "source": [
     "# Setting up MineSweeper\n",
     "\n",
-    "In this script, I set up a grid for the game minesweeper. The location of mines are assigned through a given list (which could be randomized). Then the mines are detected in order to place \"safe\" numbers on the board according to how many mines are in the neighborhood (3x3 grid with the safe square in the middle). The grid is created in two different ways - using recursion, and then functionally without recursion."
+    "In this script, I set up a grid for the game minesweeper. The location of mines are assigned through a given list (which could be randomized). Then the mines are detected in order to place \"safe\" numbers on the board according to how many mines are in the neighborhood (3x3 grid with the safe square in the middle). The grid is created in two different ways - using recursion, and then functionally without recursion.\n",
+    "\n",
+    "This code was written in November 2020"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,13 +579,6 @@
     "       [\"1\", \"X\", \"X\", \"2\", \"\"], \\\n",
     "       [\"1\", \"3\", \"X\", \"2\", \"\"]]  "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
