Added Fibonacci using iter, more tests

--- a/Python_The_early_days_of_learning.ipynb
+++ b/Python_The_early_days_of_learning.ipynb
@@ -245,6 +245,140 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Iterator: Fibonacci Sequence\n",
+    "\n",
+    "Use the concept of an iterator to iterate through the Fibonacci sequence."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"Fibonacci.py creates an iterator for the Fibonacci sequence\"\"\"\n",
+    "\n",
+    "class Fibonacci():\n",
+    "    \"\"\"Iterator class for Fibonacci sequence\"\"\"\n",
+    "\n",
+    "    def __init__(self, num) -> None:\n",
+    "        if not isinstance(num, int):\n",
+    "            raise ValueError\n",
+    "        self.num = num\n",
+    "        self.index = 0\n",
+    "        self.current_value = 0\n",
+    "        self.previous_value = 0\n",
+    "\n",
+    "    def __iter__(self):\n",
+    "        \"\"\"Returns the Fibonacci sequence\"\"\"\n",
+    "        return self\n",
+    "\n",
+    "    def __next__(self):\n",
+    "        \"\"\"Defines the next number in the sequence\"\"\"\n",
+    "\n",
+    "        if self.index > self.num:\n",
+    "            raise StopIteration\n",
+    "\n",
+    "        current_value = self.current_value\n",
+    "\n",
+    "        if self.index == 0:\n",
+    "            self.current_value = 0\n",
+    "        elif self.index == 1:\n",
+    "            self.current_value = 1\n",
+    "        else:\n",
+    "            self.current_value += self.previous_value\n",
+    "            self.previous_value = current_value\n",
+    "\n",
+    "        current_value = self.current_value\n",
+    "\n",
+    "        self.index += 1\n",
+    "\n",
+    "        return current_value\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"Test suite for fibonacci.py\"\"\"\n",
+    "\n",
+    "# import pytest\n",
+    "# from fibonacci import Fibonacci\n",
+    "\n",
+    "def test_fib_constructor():\n",
+    "    \"\"\"If constructed with a value other than an integer, \n",
+    "    the Fibonacci constructor should raise a ValueError.\n",
+    "    \"\"\"\n",
+    "    with pytest.raises(ValueError):\n",
+    "        Fibonacci('A')\n",
+    "\n",
+    "def test_fib_n_is_zero():\n",
+    "    \"\"\"Given a constructor value of 0,\n",
+    "     the iterator should produce the values [0] if cast as a list.\n",
+    "     \"\"\"\n",
+    "    assert list(Fibonacci(0))==[0]\n",
+    "\n",
+    "def test__fib_n_is_one():\n",
+    "    \"\"\"Given a constructor value of 1,\n",
+    "    the iterator should produce the values [0, 1] if cast as a list.\n",
+    "    \"\"\"\n",
+    "    assert list(Fibonacci(1))==[0,1]\n",
+    "\n",
+    "def test_fib_n_is_two():\n",
+    "    \"\"\"Given a constructor value of 2,\n",
+    "     the iterator should produce the values [0, 1, 1].\n",
+    "    \"\"\"\n",
+    "    assert list(Fibonacci(2))==[0, 1, 1]\n",
+    "\n",
+    "def test_fib_n_is_four():\n",
+    "    \"\"\"Given a value of 4,\n",
+    "    the iterator should produce [0, 1, 1, 2, 3]\n",
+    "    \"\"\"\n",
+    "    assert list(Fibonacci(4))==[0, 1, 1, 2, 3]\n",
+    "\n",
+    "def test_fib_n_is_ten():\n",
+    "    \"\"\"Given a value of 10,\n",
+    "     the iterator should produce [0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55]\n",
+    "    \"\"\"\n",
+    "    assert list(Fibonacci(10))==[0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55]\n",
+    "\n",
+    "def test_fib_n_is_neg():\n",
+    "    \"\"\"Given a negative value,\n",
+    "    the iterator should produce an empty list.\n",
+    "    \"\"\"\n",
+    "    assert not list(Fibonacci(-1))\n",
+    "\n",
+    "def test_fib_thorough():\n",
+    "    \"\"\"Test fibonacci recurrence for n =3 .. 20\"\"\"\n",
+    "    for index in range(3, 20):\n",
+    "        l_fib_n_plus_one = list(Fibonacci(index))\n",
+    "        l_fib_n_plus_one.append(l_fib_n_plus_one[-1]+l_fib_n_plus_one[-2])\n",
+    "        assert list(Fibonacci(index+1))==l_fib_n_plus_one"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run the tests\n",
+    "# test_fib_constructor() # skipped, needs pytest\n",
+    "test_fib_n_is_zero()\n",
+    "test__fib_n_is_one()\n",
+    "test_fib_n_is_two()\n",
+    "test_fib_n_is_four()\n",
+    "test_fib_n_is_ten()\n",
+    "test_fib_n_is_neg()\n",
+    "test_fib_thorough()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# A recent thought: playing with Linked Lists\n",
     "\n",
     "On November 1st 2023, while having lunch at work, I was watching a Youtube video emulating a Google Interview. The question was to reverse a linked-list.\n",
@@ -258,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +476,7 @@
     "            current = self.head\n",
     "            while current:\n",
     "                loN.append(current.data)\n",
-    "\n",
+    "                current = current.next\n",
     "            return f'LinkedList({loN})'\n",
     "        else:\n",
     "            return 'LinkedList([])'\n",
@@ -383,10 +517,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Tests for LinkedList() and revsered linked-list\n",
+    "\n",
+    "# import pytest\n",
+    "# from linked_list import LinkedList, Node\n",
+    "\n",
+    "def test_node_constructor():\n",
+    "    node = Node('')\n",
+    "    assert isinstance(node, Node) == True\n",
+    "\n",
+    "def test_node_functions():\n",
+    "    node1 = Node(1)\n",
+    "    node2 = Node(2, node1)\n",
+    "    test_str = (str(node2) == '2 -> ')\n",
+    "    test_data = (node2.pop_data() == 2)\n",
+    "    test_next = (node1.next_node() == None)\n",
+    "    test_eq12 = (node2 != node1)\n",
+    "    test_eq22 = (node2 == Node(2, node1))\n",
+    "    assert test_data and test_str and test_next and test_eq12 and test_eq22\n",
+    "\n",
+    "def test_empty_linked_list_constructor():\n",
+    "    linkedL = LinkedList([])\n",
+    "    assert isinstance(linkedL, LinkedList) == True\n",
+    "\n",
+    "def test_nonempty_linked_list_constructor():\n",
+    "    linkedL = LinkedList([1, 2])\n",
+    "    assert isinstance(linkedL, LinkedList) == True\n",
+    "\n",
+    "def test_linked_list_str():\n",
+    "    linkedL_empty = LinkedList([])\n",
+    "    linkedL_nonempty = LinkedList([1, 2])\n",
+    "    test_empty = (str(linkedL_empty) == 'empty')\n",
+    "    test_nonempty = (str(linkedL_nonempty) == 'head: 1 -> 2 -> None')\n",
+    "    assert test_empty and test_nonempty\n",
+    "\n",
+    "def test_linked_list_repr():\n",
+    "    linkedL = LinkedList([1, 2])\n",
+    "    linkedL_repr = repr(linkedL)\n",
+    "    assert isinstance(eval(linkedL_repr), LinkedList) == True\n",
+    "\n",
+    "def test_empty_linked_list_eq():\n",
+    "    linkedL = LinkedList([])\n",
+    "    assert linkedL ==  LinkedList([])\n",
+    "\n",
+    "def test_non_empty_linked_list_eq():\n",
+    "    linkedL = LinkedList([1, 2])\n",
+    "    assert linkedL == LinkedList([1, 2])\n",
+    "\n",
     "def test_reverse_empty_linked_list():\n",
     "    loN = []\n",
     "    linkedL = LinkedList(loN)\n",
@@ -401,20 +582,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_reverse_empty_linked_list()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
+    "test_node_constructor()\n",
+    "test_node_functions()\n",
+    "test_empty_linked_list_constructor()\n",
+    "test_nonempty_linked_list_constructor()\n",
+    "test_linked_list_str()\n",
+    "test_linked_list_repr()\n",
+    "test_empty_linked_list_eq()\n",
+    "test_non_empty_linked_list_eq()\n",
+    "test_reverse_empty_linked_list()\n",
     "test_reverse_non_empty_linked_list()"
    ]
   },
