Included few more beginner programs

--- a/Beginning_Python.ipynb
+++ b/Beginning_Python.ipynb
@@ -349,6 +349,84 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def highest(lst, height, highest_so_far):\n",
+    "  \"\"\"helper function to accumulate the highest alt reached\"\"\"\n",
+    "  if lst == []:\n",
+    "    return highest_so_far\n",
+    "  else:\n",
+    "    height = height + lst[0]\n",
+    "    if height > highest_so_far:\n",
+    "      highest_so_far = height\n",
+    "    return highest(lst[1:], height, highest_so_far)\n",
+    "  \n",
+    "def alt_max(L):\n",
+    "  \"\"\"alt_max(L)\n",
+    "    consumes a list of integers L representing the changes,\n",
+    "    and returns the highest altitute measured\"\"\"\n",
+    "  return highest(L, 0, 0)\n",
+    "\n",
+    "assert alt_max([5,-3, 2,3 ,-4 ,-3]) == 7\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fast_exp(x, n):\n",
+    "    \"\"\"  fast_exp(x, n)\n",
+    "        that consumes an integer x and a natural number n and \n",
+    "        computes x^n using generative recursion\"\"\"\n",
+    "    assert n >= 0\n",
+    "    \n",
+    "    if n == 0:\n",
+    "        return 1\n",
+    "    elif n == 1:\n",
+    "        return x\n",
+    "    elif n % 2 == 0:\n",
+    "        return fast_exp(x*x, n / 2)\n",
+    "    else:\n",
+    "        return x * fast_exp(x*x, (n - 1) / 2)\n",
+    "\n",
+    "assert fast_exp(2, 1) == 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_chars_acc(s, chars, lst):\n",
+    "  \"\"\"helper function: accumulates the list of count for each char\"\"\"\n",
+    "  if chars == \"\":\n",
+    "    return lst\n",
+    "  else:\n",
+    "    lst.append(s.count(chars[0]))\n",
+    "    return count_chars_acc(s, chars[1:], lst)\n",
+    "\n",
+    "def count_chars(s, chars):\n",
+    "    \"\"\"  count_chars(s, chars)\n",
+    "        consumes a string s, and a second string chars. \n",
+    "        The function returns a list of natural numbers that has the \n",
+    "        same length as chars. \n",
+    "        The number at index i in the returned list represents\n",
+    "        how many of character chars[i] occurred in the string s.\"\"\"\n",
+    "    lst = []\n",
+    "    count_chars_acc(s, chars, lst)\n",
+    "    return lst\n",
+    "\n",
+    "assert count_chars(\"Hello, world!  This is test\", \"aeiou\") == [0, 2, 2, 2, 0]\n",
+    "assert count_chars(\"Hello there\", \"h\") == [1]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -788,6 +866,51 @@
     "\n",
     "assert add_check(8675) == 86754\n",
     "assert add_check(7992739871) == 79927398718"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Converting number base\n",
+    "\n",
+    "The following program can covert a given decimal number to any base, where the user gets to choose the symbol for each digit. Thus, it can be used to encrypt (very weak, easily break-able) numbers using symbols instead of numbers in a base of your choice."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def num_in_base(num, base, lst):\n",
+    "  \"\"\"helper function: recursively mutates lst\n",
+    "   by adding the appropriate digit based on num and base\"\"\"\n",
+    "  if num // base == 0:\n",
+    "    lst.append(num)\n",
+    "    return lst\n",
+    "  else:\n",
+    "    lst.append(num % base)\n",
+    "    return  lst + num_in_base(num // base, base, lst[1:]) \n",
+    "\n",
+    "def convert_to_string(n_in_base_lst, s):\n",
+    "  \"\"\"helper function: converts the digits to the appropriate characters\"\"\"\n",
+    "  if n_in_base_lst == []:\n",
+    "    return \"\"\n",
+    "  return s[n_in_base_lst[-1]] + convert_to_string(n_in_base_lst[:-1], s)\n",
+    "  \n",
+    "def base_convert(n, s):\n",
+    "    \"\"\"  base_convert(n, s)\n",
+    "    consumes a natural number n, and a string s of 2 or more characters. \n",
+    "    These characters represent the digits in the desired number system, \n",
+    "    so they must be unique (but can be any printable character, not only\n",
+    "    the digits '0' through '9').\"\"\"\n",
+    "    base = len(s)\n",
+    "    n_in_base_lst = num_in_base(n, base, [])\n",
+    "    return convert_to_string(n_in_base_lst, s)\n",
+    "    \n",
+    "assert base_convert(17, \"01234567\") == \"21\"\n",
+    "assert base_convert(17, \"abcdefghij\") == \"bh\""
    ]
   },
   {
